--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "angular-phonecat",
+  "name": "angularjs-first",
   "private": true,
   "version": "0.0.0",
   "description": "A tutorial application for AngularJS",
-  "repository": "https://github.com/angular/angular-phonecat",
+  "repository": "https://github.com/JoseAlbertoDev/AngularJS-first",
   "license": "MIT",
   "dependencies": {
     "angular": "1.7.x",
